--- a/italiana.html
+++ b/italiana.html
@@ -37,6 +37,7 @@
                 <h3>Oriundi</h3>
                 <p><strong>Especialidade:</strong> Cozinha do Norte da Itália, incorporando elementos brasileiros e capixabas em alguns pratos.</p>
                 <p><strong>Descrição:</strong> Sob a liderança do chef Juarez Campos, considerado embaixador da cena gastronômica capixaba, o Oriundi foi fundado em 1993 e já conquistou diversos prêmios, incluindo o reconhecimento como o melhor restaurante italiano e melhor chef da cidade por publicações como a revista Veja e Gourmet Vip.</p>
+                <p><strong>Endereço:</strong>strong> R. Elías Tomasi Sobrinho, 130 - Santa Lucia, Vitória</p>
             </div>
 
             <div class="restaurant-card">
@@ -44,6 +45,7 @@
                 <h3>Tomatto Trattoria</h3>
                 <p><strong>Especialidade:</strong> Raviólis, nhoque, massa de lasanha verde, e todos os tipos de macarrão.</p>
                 <p><strong>Descrição:</strong> Aconchegante e sofisticada, a Tomato Trattoria, na Praia do Canto, oferece um cardápio assinado pelo chef Fabrício Baccini que entrega pratos inspirados nas próprias memórias com a comida preparada por sua avó italiana.</p>
+                <p><strong>Endereço:</strong>strong> Av. Hugo Musso, 739 - Praia da Costa, Vila Velha</p>
             </div>
 
             <div class="restaurant-card">
@@ -51,6 +53,7 @@
                 <h3>Bontà</h3>
                 <p><strong>Especialidade:</strong> Pizza, Gnocchi alla Sorrentina, Gnocchi 4 Formaggi e Gnocchi al Ragu.</p>
                 <p><strong>Descrição:</strong> Na Prainha, em Vila Velha, oferece uma autêntica experiência napolitana na degustação do carro chef da casa, a pizza com massa de longa fermentação, certificada pela AVPN de Napoli. Única casa da grande Vitória e uma das 27 pizzarias do Brasil com o selo da Associazione Verace Pizza Napoletana (AVPN).</p>
+                <p><strong>Endereço:</strong>strong>  R. Antônio Ataíde, 218 - Centro de Vila Velha, Vila Velha</p>
             </div>
         </section>
     </main>
